--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ window.eventTypeFilters = [
 var date = new Date();
 var url = 'https://go.peoplepower.org/event/action/search/?template_set=json_api';
 if (window.location.search.match(/v2/)) {
-   url = "http://d3r5pbxngwkvri.cloudfront.net/action_events.js.gz";
+   url = "https://d3r5pbxngwkvri.cloudfront.net/action_events.js.gz";
 }
 if (window.location.search.match(/v3/)) {
    url = "https://s3.amazonaws.com/thirdbear-backups/aclu/public/action_events.js";
